# mosnad-challenga-one

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  diesel.toml  docker-compose.yml
migrations/2024-06-07-102054_createUser/: down.sql  up.sql
migrations/2024-06-08-140839_create_word_table/: down.sql  up.sql
migrations/2024-06-08-200203_edit_word_table_add_userid/: down.sql  up.sql
src/: database.rs  jwt.rs  main.rs  password_manager.rs  response.rs  schema.rs
src/user/: handlers.rs  models.rs
src/word/: handlers.rs  models.rs
