[package]
name = "urbandic"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2", features = ["postgres"] }
diesel_migrations = "2"
dotenvy = "0.15"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
argon2 = "0.5.3"
password-hash = "0.5.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
itertools = "0.13.0"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_postgres"]
